@@ -10,6 +10,7 @@ For a detailed view of what has changed, refer to the {url-repo}/commits/main[co
 Bug Fixes::
 
 * fix position of background color on caption with outside margin (#2271)
+* don't allow font scale to compound when entering nested table (#2276)
 
 == 2.1.4 (2022-06-26) - @mojavelinux
 
